2007-06-19  Christian Persch  <chpe@gnome.org>

	* libgnome/gnome-init.c: (libgnome_post_args_parse),
	(libgnome_module_get_goption_group), (libgnome_module_info_get):
	Simplify by using g_object_get instead of g_object_get_property.
	No need to make the GOptionEntry data static.

2007-06-19  Christian Persch  <chpe@gnome.org>

	* libgnome/gnome-program.c: (gnome_program_locate_file),
	(gnome_program_parse_args): Simplify by using g_object_get
	instead of g_object_get_property.

2007-06-18  Claudio Saavedra  <csaavedra@alumnos.utalca.cl>

	* configure.in: Post release version bump.

======================= libgnome 2.19.0 ========================

2007-06-18  Claudio Saavedra  <csaavedra@alumnos.utalca.cl>

	* NEWS: Update for the 2.19.0 release
	* doc/reference/tmpl/gnome-program.sgml:

2007-04-18  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Portability fix. == vs = in test.
	* libgnome/gnome-help.c: (gnome_help_display_with_doc_id_and_env):
	* schemas/desktop_gnome_accessibility_keyboard.schemas.in:
	* schemas/desktop_gnome_applications_at_mobility.schemas.in:
	Fix typos spotted by Kenneth Nielsen. Closes bug #429751.

2007-04-09  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/gnome-program.c:
	Add some more info to the docs for gnome_program_init().
	Thanks go to Christian Persch. Closes bug #82943.

2007-04-09  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/libgnome-2.0-uninstalled.pc.in:
	* libgnome/libgnome-2.0.pc.in:
	Add esound to Requires.private. Bug #405352.

2007-04-01  Matthias Clasen  <mclasen@redhat.com>

	* libgnome/gnome-program.c (gnome_program_preinit): Set
	the program name to the basename of argv[0]. This is
	expected by other parts of the stack, and e.g. makes bug-buddy
	work for applets again.  (#424949)

2007-02-24  Christian Persch  <chpe@svn.gnome.org>

	* libgnome/Makefile.am: Rebuild the type builtins when the Makefile
	changes.

	* libgnome/gnome-config.c:
	* libgnome/gnome-exec.c:
	* libgnome/gnome-gconf.c: